Update Settings “settings”

--- a/content/globals/settings.json
+++ b/content/globals/settings.json
@@ -9,7 +9,7 @@
     },
     {
       "name": "email",
-      "url": "mailto:dan@moderncollab.co.uk"
+      "url": "#contact"
     },
     {
       "name": "phone",
