--- a/content/globals/settings.json
+++ b/content/globals/settings.json
@@ -13,7 +13,8 @@
     },
     {
       "name": "phone",
-      "url": "tel:+447950908085"
+      "url": "tel:+447950908085",
+      "tooltip": "07950 908085"
     }
   ]
 }
