--- a/content/globals/settings.json
+++ b/content/globals/settings.json
@@ -30,7 +30,7 @@
       "item": "Company number 12528261"
     },
     {
-      "item": "[Privacy policy](https://www.websitepolicies.com/policies/view/eoVvA4Xa)"
+      "item": "[Privacy policy](https://moderncollab.co.uk/privacy-policy/)"
     },
     {
       "item": "[Cookies policy](https://www.websitepolicies.com/policies/view/dxQibFWm)"
