Update Settings “settings”

--- a/content/globals/settings.json
+++ b/content/globals/settings.json
@@ -33,7 +33,7 @@
       "item": "[Privacy policy](https://www.iubenda.com/privacy-policy/17782666)"
     },
     {
-      "item": "[Cookies policy](https://www.websitepolicies.com/policies/view/dxQibFWm)"
+      "item": "We don't use cookies here"
     },
     {
       "item": "Made by [Remi Duval](http://remiduval.com/)"
