Update Settings “settings”

--- a/content/globals/settings.json
+++ b/content/globals/settings.json
@@ -1,6 +1,6 @@
 {
   "logo": "/assets/uploads/logo.svg",
-  "cookies": "COOKIE  NOTICE HERE",
+  "cookies": "",
   "gtm": "GTM-565ZMXD",
   "socials": [
     {
