--- a/admin/config.yml
+++ b/admin/config.yml
@@ -366,9 +366,9 @@ collections:
     editor:
       preview: false
     files:
-      - file: content/teachmeoffice365.md
-        label: Teach Me Office 365
-        name: teachmeoffice365
+      - file: content/worksmart.md
+        label: Work Smart
+        name: worksmart
         fields:
           - label: Title
             name: title
